@@ -1392,6 +1392,7 @@ Greg Burley  <Burley@tabq.com.au>
 Marvin Greenberg <mgreenberg@dctd.saic.com>
 Mike Connors <mike.connors@ghs.com>
 Ben Flight <ben.flight@wanadoo.fr> 
+Bob Jolliffe <bjolliffe@cs.up.ac.za>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
